Update html, add style

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Landing page</title>
 </head>
 
 
 <body>
     <div class="header">
-        <img src="." alt="header logo">
+        <p class="headerlogo">Header Logo</p>
         <ul class="headerlinks">
             <li><a href=".">header link one</a></li>
             <li><a href=".">header link two</a></li>
@@ -34,26 +35,25 @@
         <div class="parttwo">
             <h2>Some random information</h2>
             <ul>
-                <li>this is some subtext under an illustration or image</li>
-                <li>this is some subtext under an illustration or image</li>
-                <li>this is some subtext under an illustration or image</li>
-                <li>this is some subtext under an illustration or image</li>
+                <li><div class="card"></div>this is some subtext under an illustration or image</li>
+                <li><div class="card"></div>this is some subtext under an illustration or image</li>
+                <li><div class="card"></div>this is some subtext under an illustration or image</li>
+                <li><div class="card"></div>this is some subtext under an illustration or image</li>
             </ul>
         </div>
 
         <div class="partthree">
             <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks</p>
-            <p>-Thor, God of Thunder</p>
+            <p id="thor">-Thor, God of Thunder</p>
         </div>
 
         <div class="partfour">
             <div class="container">
-                <div class="left">
+                <div class="action">
                     <p>Call to action! It's time!</p>
                     <p>Sign up for our products by clicking that button right over there!</p>
-                </div>
-
-                <button class="signup">Sign up</button>
+                    <button class="signup">Sign up</button>
+                </div>                
                     
                 </div>
             </div>
