--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="left">
                 <h1>This website is awesome</h1>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button class="signup">Sign up</button>
+                <button class="signup one">Sign up</button>
             </div>
 
             <div class="right">
@@ -33,8 +33,8 @@
         </div>
 
         <div class="parttwo">
-            <h2>Some random information</h2>
-            <ul>
+            <h2>Some random information.</h2>
+            <ul id="cards">
                 <li><div class="card"></div>this is some subtext under an illustration or image</li>
                 <li><div class="card"></div>this is some subtext under an illustration or image</li>
                 <li><div class="card"></div>this is some subtext under an illustration or image</li>
@@ -43,19 +43,17 @@
         </div>
 
         <div class="partthree">
-            <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks</p>
-            <p id="thor">-Thor, God of Thunder</p>
+            <p id="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks good.</p>
+            <p id="thor"><strong>-Thor, God of Thunder</strong></p>
         </div>
 
         <div class="partfour">
             <div class="container">
                 <div class="action">
-                    <p>Call to action! It's time!</p>
-                    <p>Sign up for our products by clicking that button right over there!</p>
-                    <button class="signup">Sign up</button>
-                </div>                
-                    
-                </div>
+                    <span class="call"> Call to action! It's time!</span>
+                    <span class="block">Sign up for our products by clicking that button right over there!</span>
+                </div>  
+                <button class="signup two">Sign up</button>
             </div>
         </div>
 
